--- a/public/sass/_gassed-gradients.scss
+++ b/public/sass/_gassed-gradients.scss
@@ -36,9 +36,8 @@
 	&#crew-wave {
 		.gradient {
 			margin-top: 10%;
-			padding-top: 25%;
-			padding-bottom: 25%;
-			height: auto;
+			height: 120vh;
+			display: flex;
 			width: calc(100vw + 4px);
 			margin-left: -25vw;
 
@@ -49,6 +48,10 @@
 			background: -ms-radial-gradient(70% 17%, ellipse cover, rgba(210,126,52,1) 0%, rgba(91,125,150,1) 75%);
 			background: radial-gradient(ellipse at 70% 17%, #d27e34 0%, #5b7d96 75%);
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d27e34', endColorstr='#5b7d96', GradientType=1 );
+
+			.center {
+				align-items: center;
+			} 
 		}
 		
 	}
@@ -56,9 +59,8 @@
 	&#anti-social {
 		.gradient {
 			margin-top: 10%;
-			padding-top: 30%;
-			padding-bottom: 30%;
-			height: auto;
+			display: flex;
+			height: 120vh;
 			width: calc(100vw + 4px);
 			margin-left: -25vw;
 
@@ -69,6 +71,10 @@
 			background: -ms-linear-gradient(55deg, rgba(26,38,42,1) 0%, rgba(72,127,165,1) 95%, rgba(72,127,165,1) 100%);
 			background: linear-gradient(55deg, rgba(26,38,42,1) 0%, rgba(72,127,165,1) 95%, rgba(72,127,165,1) 100%);
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a262a', endColorstr='#487fa5', GradientType=1 );
+
+			.center {
+				align-items: center;
+			} 
 		}
 		
 	}
